integrating youtube api

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,4 +7,9 @@
             <a href="/user/registration" class="btn btn-primary btn-xl">Get Started</a>
         </div>
     </div>
+    <div id="forex-playlist">
+
+    </div>
 </div>
+<script src="https://apis.google.com/js/client.js?onload=googleApiClientReady"></script>
+<script src="https://apis.google.com/js/api.js"></script>
