--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -82,7 +82,31 @@
     </div>
     </footer>
      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+     <script src="/js/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script></script>
+    <script src="https://apis.google.com/js/client.js?onload=googleApiClientReady">
+        const defaultChannel = 'TechLead';
+        const API_KEY = '';
+
+        function googleApiClientReady(){
+            gapi.client.setApiKey('AIzaSyCfU-Y4NpZeJxkcA4-veqKQhaLaCMg-XZI');
+            gapi.client.load('youtube', 'v3', function() {
+                    searchA();
+            });
+        }
+        function searchA() {
+            gapi.client.youtube.channels.list({
+                part: 'snippet, contentDetails, statistics',
+                forUsername: 'TechLead'
+            })
+            .then(response => {
+                console.log(response)
+            })
+            .catch(err => alert('No channel by this name'))
+        }
+
+    </script>
  </body>
 </html>
