--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,14 +2,12 @@
     <div class="row dash-top pl-3">
         <div class="col-md-6 text-white pb-5 pl-5">
             <h2 class="font-weight-bold pt-5">Trade Your Way to Freedom</h2>
-            <p>Join our Forex class, build skills to scale you up to freedom</p>
-            <p>You are covered at your own pace, anywhere and anytime...</p>
-            <a href="/user/registration" class="btn btn-primary btn-xl">Get Started</a>
+            <p>Welcome to your dashboard</p>
+            <p>Please browse through our catalogue of courses and start learning</p>
         </div>
     </div>
-    <div id="forex-playlist">
-
+    <div class="container">
+        <div id="forex-channel"></div>
+        <div id="forex-videos" class="row"></div>
     </div>
 </div>
-<script src="https://apis.google.com/js/client.js?onload=googleApiClientReady"></script>
-<script src="https://apis.google.com/js/api.js"></script>
