--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -4,13 +4,13 @@
       <span class="text-center" style="font-size: 3em;">
         <i class="fas fa-chalkboard"></i> Register
       </span>
-      <form action="/user/addUser" method="POST">
+      <form action="/user/registration" method="POST">
         <div class="form-group">
           <label for="name">Name</label>
           <input
             type="name"
             id="name"
-            name="name"
+            name="username"
             class="form-control"
             placeholder="Enter Name"
             value="{{name}}"
