--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
  </head>
  <body>
       <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">FOREX TUTOR</a>
+        <a class="navbar-brand" href="#">ALXNDA</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -86,27 +86,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script></script>
-    <script src="https://apis.google.com/js/client.js?onload=googleApiClientReady">
-        const defaultChannel = 'TechLead';
-        const API_KEY = '';
-
-        function googleApiClientReady(){
-            gapi.client.setApiKey('AIzaSyCfU-Y4NpZeJxkcA4-veqKQhaLaCMg-XZI');
-            gapi.client.load('youtube', 'v3', function() {
-                    searchA();
-            });
-        }
-        function searchA() {
-            gapi.client.youtube.channels.list({
-                part: 'snippet, contentDetails, statistics',
-                forUsername: 'TechLead'
-            })
-            .then(response => {
-                console.log(response)
-            })
-            .catch(err => alert('No channel by this name'))
-        }
-
-    </script>
+    <script src="https://apis.google.com/js/client.js?onload=googleApiClientReady"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
  </body>
 </html>
